--- a/index.html
+++ b/index.html
@@ -8,11 +8,31 @@
 </head>
 <body>
   <!-- Header with background image -->
-  <div class="header">
-    <h1>Free Library</h1>
-  </div>
+  <header class="header">
+        <h1>Free Library</h1>
+        <nav>
+          <ul>
+            <li>
+              <a href="/home" data-link id="home">home</a>
+            </li>
+            <li>
+              <a href="/login" data-link id="login">Login</a>
+            </li>
+            <li>
+              <a href="/register" data-link id="register">Register</a>
+            </li>
+            <li>
+              <a href="/available id" data-link id="available" >Available</a>
+            </li>
+            <li>
+              <a href="/myBooks" id="myBooks"  data-link >My books</a>
+            </li>
+          </ul>
+        </nav>
+  </header>
 
-  <div class="container">
+
+  <div class="container" id="root">
     <!-- Search bar -->
     <div class="search-bar">
       <input type="text" id="search-input" placeholder="Search books by title or author...">
@@ -25,6 +45,6 @@
     <div id="pagination" class="pagination"></div>
   </div>
 
-  <script src="./js/app.js"></script>
+  <script src="./js/app.js" type="module"></script>
 </body>
 </html>
