--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,41 +9,60 @@
 <body>
   <!-- Header with background image -->
   <header class="header">
-        <h1>Free Library</h1>
-        <nav>
-          <ul>
-            <li>
-              <a href="/home" data-link id="home">home</a>
-            </li>
-            <li>
-              <a href="/login" data-link id="login">Login</a>
-            </li>
-            <li>
-              <a href="/register" data-link id="register">Register</a>
-            </li>
-            <li>
-              <a href="/available id" data-link id="available" >Available</a>
-            </li>
-            <li>
-              <a href="/myBooks" id="myBooks"  data-link >My books</a>
-            </li>
-          </ul>
-        </nav>
+    <div class="header-wrapper">
+      <a href="/" data-link><h1>Free Library</h1></a>
+      <nav>
+        <ul>
+          <li>
+            <a href="/" data-link id="home">home</a>
+          </li>
+          <li>
+            <a href="/login" data-link id="login">Login</a>
+          </li>
+          <li>
+            <a href="/register" data-link id="register">Register</a>
+          </li>
+          <li>
+            <a href="/available id" data-link id="available" >Available</a>
+          </li>
+          <li>
+            <a href="/myBooks" id="myBooks"  data-link >My books</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-
-  <div class="container" id="root">
+  <main>
     <!-- Search bar -->
-    <div class="search-bar">
-      <input type="text" id="search-input" placeholder="Search books by title or author...">
-      <button id="search-button">Search</button>
+
+    <div class="search">
+      <div class="search-background"></div>
+      <h1>Something interesting to search...?</h1>
+      <form id="search-form" class="search-bar">
+        <input type="text" id="search-input" placeholder="Search books by title or author..." required>
+        <button type="submit" id="search-button">Search</button>
+      </form>
+      <!-- <div class="search-suggest">
+        <li>
+          <button>hola</button>
+        </li>
+      </div> -->
     </div>
 
-    <!-- Results container -->
-    <div class="results" id="results"></div>
-    <!-- Pagination -->
-    <div id="pagination" class="pagination"></div>
-  </div>
+
+    <div class="container" id="root">
+      <!-- Results container -->
+      <div class="results" id="results"></div>
+      <!-- Pagination -->
+      <div id="pagination" class="pagination"></div>
+    </div>
+
+    <div>
+      <h2>Tech Industry</h2>
+    </div>
+  </main>
+
 
   <script src="./js/app.js" type="module"></script>
 </body>
